--- a/src/main/resources/Front-end/Utenti/Animatore/creacontest.html
+++ b/src/main/resources/Front-end/Utenti/Animatore/creacontest.html
@@ -17,14 +17,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark custom-navbar-color">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../../../../../../idsproject2324/src/main/resources/front-end/Utenti/animatore/mappa.html">
+        <a class="navbar-brand" href="../../../../../../../idsproject2324/src/main/resources/front-end/Utenti/animatore/mappa.html">
             <span>Macerata's Places</span>
         </a>
         <span class="welcome-text">Benvenuto Animatore !</span>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../../../../idsproject2324/src/main/resources/front-end/Utenti/animatore/mappa.html" id="mappaLink" >Mappa</a>
+                    <a class="nav-link" href="../../../../../../../idsproject2324/src/main/resources/front-end/Utenti/animatore/mappa.html" id="mappaLink" >Mappa</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="itinerary.html" id="itinerariLink" >Itinerari</a>
